add core module and and modify style scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/scss/global';
+@import './assets/scss/header';
+@import './assets/scss/page-container';
+@import './assets/scss/login'
