--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<main class="page-container ">
+<main class="page-container bg-light-gray">
   <router-outlet></router-outlet>
 </main>
