--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,15 +1,21 @@
 <section class="bg-gray">
   <div class="container">
     <nav aria-label="breadcrumb " class=" ">
-      <ol class="breadcrumb  ">
+      <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">Library</li>
       </ol>
     </nav>
     <div class=" d-flex justify-content-between align-items-center">
       <h3><b>User List</b></h3>
-      <a class="my-btn px-2 my-2 py-2 mx-4">Add new</a>
+      <a class="my-btn px-2 my-2 py-2 mx-4">
+        <fa-icon [icon]="faAdd"></fa-icon> Add new</a>
     </div>
   </div>
 </section>
-<router-outlet></router-outlet>
+<section class="bg-light-gray d-flex flex-column justify-content-center container">
+  <router-outlet></router-outlet>
+</section>
+
+
+
