create addUser modal and all templates

--- a/src/app/page/user-list/user-list.component.html
+++ b/src/app/page/user-list/user-list.component.html
@@ -64,10 +64,10 @@
         </td>
         <td>
           <div class="actions d-flex justify-content-center align-items-center">
-            <a class="my-link btn btn-outline-primary mr-1">
+            <a class="my-link btn btn-outline-primary mr-1" (click)="editUser()">
               <fa-icon [icon]='faPencil'></fa-icon>
             </a>
-            <a class="my-link btn btn-outline-primary mr-1">
+            <a class="my-link btn btn-outline-primary mr-1" (click)="deleteUser()">
               <fa-icon [icon]='faTrash'></fa-icon>
             </a>
             <a class="my-link btn  mr-1 justify-self-end">
