--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -16,6 +16,10 @@ $third-color:#F5F5F5;
     
 }
 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
 .container{
     width:90%;
     margin:0 auto;
