--- a/src/app/page/view-user/view-user.component.html
+++ b/src/app/page/view-user/view-user.component.html
@@ -1,4 +1,4 @@
-<aside class="w-100 d-flex flex-column justify-content-center">
+<aside class="w-100 d-flex flex-column justify-content-between rounded shadow h-100" >
     <div class="d-flex justify-content-end text-primary"><a><fa-icon [icon]='fatimes'></fa-icon></a></div>
     <div class="d-flex flex-column justify-content-center align-items-center my-3">
         <img class="my-image my-3"src="https://placeimg.com/100/100/people" />
