--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+// @import '~bootstrap/scss/functions';
+// @import '~bootstrap/scss/variables';
+// @import '~bootstrap/scss/mixins';
+// @import '~ngx-toastr/toastr-bs4-alert';
+
+@import '~ngx-toastr/toastr';
+
 @import './assets/scss/global';
 @import './assets/scss/header';
 @import './assets/scss/page-container';
-@import './assets/scss/login'
+@import './assets/scss/login';
