--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -1,19 +1,23 @@
 <div>
-    <div class="d-flex justify-content-center">
-        <img class="my-image mb-3"  src="https://placeimg.com/100/100/people?t=1608759789416"/>
-    </div>
+  <div class="d-flex justify-content-center">
+    
+    <img  class="my-image mb-3" [src]="data?.avatar || 'https://style.anu.edu.au/_anu/4/images/placeholders/person.png'"  />
+  </div>
+  <form #addUser="ngForm" >
     <div class="modal-body">
-        <div class="form-group">
-            <label for="formGroupExampleInput">Name</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-          </div>
-          <div class="form-group">
-            <label for="formGroupExampleInput2">Job Title</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-          </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput">Name</label>
+        <input type="text" class="form-control" name="name" id="formGroupExampleInput"
+          [(ngModel)]="user.name" placeholder="Name">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Job Title</label>
+        <input type="text" class="form-control" name="job" [(ngModel)]="user.job"  id="formGroupExampleInput2" placeholder="Job Title">
+      </div>
     </div>
     <div class="modal-footer d-flex justify-content-between">
-        <a class="my-btn px-2 py-1" (click)="close()">Cancel</a>
-        <a class="my-btn px-2 py-1"  (click)="close()">Add</a>
+      <a class="my-btn px-2 py-1" (click)="close()">Cancel</a>
+      <a class="my-btn px-2 py-1" (click)="submit(addUser)">{{editMode ? 'Update':'Add'}}</a>
     </div>
+  </form>
 </div>
