--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,28 +1,30 @@
 <section class=" d-flex justify-content-center align-items-center">
   <div class="d-flex">
-    <img  src="../../../assets/img/login.png" class="col-6 login_image">
+    <img src="../../../assets/img/login.png" class="col-6 login_image">
     <div class=" col-6 login_form d-flex flex-column justify-content-center">
-       <h3 class="my-3">Welcome Back!</h3>
-       <p class="my-2">Please login to access Spaces Dashboard </p>
-       <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
-       <div class="my-2">
-         
-               <div class="form-group">
-                 <label for="formGroupExampleInput">Email</label>
-                 <input type="email" required class="form-control" name="email" [(ngModel)]="loginData.email"   ngModel id="formGroupExampleInput" placeholder="Type your email">
-               </div>
-               <div class="form-group">
-                 <label for="formGroupExampleInput2">Password</label>
-                 <input type="password" required class="form-control" name="password" ngModel [(ngModel)]="loginData.password" id="formGroupExampleInput2" placeholder="Type your password">
-               </div>
-              
-       </div>
-       <div class="d-flex justify-content-between">
-           <a class="my-link">Forgot Password ?</a>
-           <input type="submit" class="my-btn py-2 px-3" value="Login" />
-       </div>
+      <h3 class="my-3">Welcome Back!</h3>
+      <p class="my-2">Please login to access Spaces Dashboard </p>
+      <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+        <div class="my-2">
+
+          <div class="form-group">
+            <label for="formGroupExampleInput">Email</label>
+            <input type="email" required class="form-control" name="email" [(ngModel)]="loginData.email" ngModel
+              id="formGroupExampleInput" placeholder="Type your email">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2">Password</label>
+            <input type="password" required class="form-control" name="password" ngModel
+              [(ngModel)]="loginData.password" id="formGroupExampleInput2" placeholder="Type your password">
+          </div>
+
+        </div>
+        <div class="d-flex justify-content-between">
+          <a class="my-link">Forgot Password ?</a>
+          <input type="submit" class="my-btn py-2 px-3" value="Login" />
+        </div>
       </form>
     </div>
   </div>
- 
+
 </section>
