--- a/src/app/page/view-user/view-user.component.html
+++ b/src/app/page/view-user/view-user.component.html
@@ -1,12 +1,12 @@
-<aside class="w-100 d-flex flex-column justify-content-between rounded shadow h-100" >
+<aside class="w-100 d-flex flex-column justify-content-between rounded shadow h-50" >
     <div class="d-flex justify-content-end text-primary"><a><fa-icon [icon]='fatimes'></fa-icon></a></div>
     <div class="d-flex flex-column justify-content-center align-items-center my-3">
-        <img class="my-image my-3"src="https://placeimg.com/100/100/people" />
-        <label class="my-1"><strong>John Doe</strong></label>
+        <img class="my-image my-3" [src]="user?.avatar" />
+        <label class="my-1"><strong>{{user?.first_name}} {{user?.last_name}}</strong></label>
     </div>
     <div class="d-flex justify-content-center align-items-center">
-        <a class="my-btn mx-3 py-1 px-2">  <fa-icon class="mx-1" [icon]='faPencil'></fa-icon>Edit</a>
-        <a class="my-btn mx-3 py-1 px-2"> <fa-icon class="mx-1" [icon]='faTrash'></fa-icon>Delete </a>
+        <a class="my-btn mx-3 py-1 px-2" (click)="editItem()">  <fa-icon class="mx-1"  [icon]='faPencil'></fa-icon>Edit</a>
+        <a class="my-btn mx-3 py-1 px-2" (click)="deleteItem()"> <fa-icon class="mx-1" [icon]='faTrash'></fa-icon>Delete </a>
     </div>
 
 </aside>
