--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -3,12 +3,12 @@
     <nav aria-label="breadcrumb " class=" ">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Library</li>
+        <li class="breadcrumb-item active" aria-current="page">User</li>
       </ol>
     </nav>
     <div class=" d-flex justify-content-between align-items-center">
       <h3><b>User List</b></h3>
-      <a class="my-btn px-2 my-2 py-2 mx-4">
+      <a class="my-btn px-2 my-2 py-2 mx-4" (click)="addUser()">
         <fa-icon [icon]="faAdd"></fa-icon> Add new</a>
     </div>
   </div>
