--- a/src/app/page/add-user/add-user.component.html
+++ b/src/app/page/add-user/add-user.component.html
@@ -7,12 +7,12 @@
     <div class="modal-body">
       <div class="form-group">
         <label for="formGroupExampleInput">Name</label>
-        <input type="text" class="form-control" name="name" id="formGroupExampleInput"
+        <input type="text" class="form-control" required name="name" id="formGroupExampleInput"
           [(ngModel)]="user.name" placeholder="Name">
       </div>
       <div class="form-group">
         <label for="formGroupExampleInput2">Job Title</label>
-        <input type="text" class="form-control" name="job" [(ngModel)]="user.job"  id="formGroupExampleInput2" placeholder="Job Title">
+        <input type="text" class="form-control" required name="job" [(ngModel)]="user.job"  id="formGroupExampleInput2" placeholder="Job Title">
       </div>
     </div>
     <div class="modal-footer d-flex justify-content-between">
