--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -9,12 +9,12 @@
 
           <div class="form-group">
             <label for="formGroupExampleInput">Email</label>
-            <input type="email" required class="form-control" name="email" [(ngModel)]="loginData.email" ngModel
+            <input type="email" required class="form-control" required name="email" [(ngModel)]="loginData.email" ngModel
               id="formGroupExampleInput" placeholder="Type your email">
           </div>
           <div class="form-group">
             <label for="formGroupExampleInput2">Password</label>
-            <input type="password" required class="form-control" name="password" ngModel
+            <input type="password" required class="form-control" required name="password" ngModel
               [(ngModel)]="loginData.password" id="formGroupExampleInput2" placeholder="Type your password">
           </div>
 
