--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -4,18 +4,18 @@
     <div class=" col-6 login_form d-flex flex-column justify-content-center">
       <h3 class="my-3">Welcome Back!</h3>
       <p class="my-2">Please login to access Spaces Dashboard </p>
-      <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+      <form [formGroup]="loginForm" (submit)="onSubmit(loginForm)">
         <div class="my-2">
 
           <div class="form-group">
             <label for="formGroupExampleInput">Email</label>
-            <input type="email" required class="form-control" required name="email" [(ngModel)]="loginData.email" ngModel
-              id="formGroupExampleInput" placeholder="Type your email">
+            <input type="email" formControlName="email" class="form-control" name="email" 
+              id="formGroupExampleInput" placeholder="Type your email" />
           </div>
           <div class="form-group">
             <label for="formGroupExampleInput2">Password</label>
-            <input type="password" required class="form-control" required name="password" ngModel
-              [(ngModel)]="loginData.password" id="formGroupExampleInput2" placeholder="Type your password">
+            <input type="password" formControlName="password" class="form-control" name="password" 
+               id="formGroupExampleInput2" placeholder="Type your password">
           </div>
 
         </div>
